--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "@faker-js/faker": "^7.6.0",
     "axios": "0.19.2",
     "body-parser": "1.15.0",
     "commander": "6.2.1",
